--- a/Unknown-3/index.html
+++ b/Unknown-3/index.html
@@ -47,8 +47,17 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/altmanb15" target="_blank"
+            >Brooke Altman</a
+          >
+          and is
+          <a
+            href="https://github.com/altmanb15?tab=repositories"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
