--- a/Unknown-3/index.html
+++ b/Unknown-3/index.html
@@ -52,13 +52,17 @@
           >
           and is
           <a
-            href="https://github.com/altmanb15?tab=repositories"
+            href="https://github.com/altmanb15/GitHub--Hosting-Homework"
             target="_blank"
           >
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a
+            href="https://65d0e24691a5a79d61ec9654--fantastic-nougat-916ab4.netlify.app"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
